ui/accessibility/ax_tree.h
@@ -170,7 +170,9 @@ class AX_EXPORT AXTree : public AXNode::OwnerTree {
                   bool is_new_root,
                   AXTreeUpdateState* update_state);
 
-  void CallNodeChangeCallbacks(AXNode* node, const AXNodeData& new_data);
+  void CallNodeChangeCallbacks(AXNode* node,
+                               const AXNodeData& old_data,
+                               const AXNodeData& new_data);
 
   void UpdateReverseRelations(AXNode* node, const AXNodeData& new_data);
 
